cmake_minimum_required(VERSION 3.19)
project(R203—TP0)

set(CMAKE_CXX_STANDARD 14)

add_executable(exercice1 exercice1.cpp
        ../../R302-TP1/R302-TP1/Exercice1/TesteListe.cpp)

add_executable(exercice2 exercice2.cpp
        ../../R302-TP1/R302-TP1/Exercice1/TesteListe.cpp)

add_executable(exercice3 exercice3.cpp
        ../../R302-TP1/R302-TP1/Exercice1/TesteListe.cpp)

add_executable(exercice4 exercice4.cpp
        ../../R302-TP1/R302-TP1/Exercice1/TesteListe.cpp)